--- a/Cake-Website-main/index.html
+++ b/Cake-Website-main/index.html
@@ -123,7 +123,7 @@
     <!-- featured section starts  -->
     <section>
         <div class="container-fluid">
-            <div class="row">
+            <div class="row ">
                 <div class="col-md-12">
                     <div class="featured">
                         <div class="row">
@@ -906,13 +906,13 @@
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">Open Hours</h2>
                         <ul class="list-unstyled open-hours">
-                            <li class="d-flex"><span>Monday</span><span>9:00 - 24:00</span></li>
-                            <li class="d-flex"><span>Tuesday</span><span>9:00 - 24:00</span></li>
-                            <li class="d-flex"><span>Wednesday</span><span>9:00 - 24:00</span></li>
-                            <li class="d-flex"><span>Thursday</span><span>9:00 - 24:00</span></li>
-                            <li class="d-flex"><span>Friday</span><span>9:00 - 02:00</span></li>
-                            <li class="d-flex"><span>Saturday</span><span>9:00 - 02:00</span></li>
-                            <li class="d-flex"><span>Sunday</span><span> 9:00 - 02:00</span></li>
+                            <li class="d-flex"><span>Monday</span><span>9:00 AM - 10:00 PM</span></li>
+                            <li class="d-flex"><span>Tuesday</span><span>9:00 AM - 10:00 PM</span></li>
+                            <li class="d-flex"><span>Wednesday</span><span>9:00 AM - 10:00 PM</span></li>
+                            <li class="d-flex"><span>Thursday</span><span>9:00 AM - 10:00 PM</span></li>
+                            <li class="d-flex"><span>Friday</span><span>9:00 AM - 10:00 PM</span></li>
+                            <li class="d-flex"><span>Saturday</span><span>9:00 AM - 10:00 PM</span></li>
+                            <li class="d-flex"><span>Sunday</span><span> 9:00 AM - 10:00 PM</span></li>
                         </ul>
                     </div>
                 </div>
