--- a/Cake-Website-main/index.html
+++ b/Cake-Website-main/index.html
@@ -523,7 +523,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_1.jpg);"></div>
                                         <div class="pl-3">
-                                            <p class="name">Nilay Hirpara</p>
+                                            <p class="name">Yash Padme</p>
                                             <span class="position">Owner</span>
                                         </div>
                                     </div>
@@ -543,7 +543,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_2.jpg);"></div>
                                         <div class="pl-3">
-                                            <p class="name">Nilay Hirpara</p>
+                                            <p class="name">Yash Padme</p>
                                             <span class="position">Owner</span>
                                         </div>
                                     </div>
@@ -563,7 +563,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_3.jpg);"></div>
                                         <div class="pl-3">
-                                            <p class="name">Nilay Hirpara</p>
+                                            <p class="name">Yash Padme</p>
                                             <span class="position">Owner</span>
                                         </div>
                                     </div>
@@ -583,7 +583,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_4.jpg);"></div>
                                         <div class="pl-3">
-                                            <p class="name">Nilay Hirpara</p>
+                                            <p class="name">Yash Padme</p>
                                             <span class="position">Owner</span>
                                         </div>
                                     </div>
@@ -603,7 +603,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_1.jpg);"></div>
                                         <div class="pl-3">
-                                            <p class="name">Nilay Hirpara</p>
+                                            <p class="name">Yash Padme</p>
                                             <span class="position">Owner</span>
                                         </div>
                                     </div>
@@ -651,7 +651,7 @@
                     <div class="staff">
                         <div class="img" style="background-image: url(images/chef1.jpg);"></div>
                         <div class="text pt-4 text-center">
-                            <h3>Nilay Hirpara</h3>
+                            <h3>Yash Padme</h3>
                             <span class="position mb-2">Owner</span>
                             <div class="faded">
                                 <ul class="ftco-social d-flex justify-content-center">
